# libav_samples

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  analize.txt  big_buck_bunny_all.csv  big_buck_bunny_audio.csv  build_env.py  callbacks.h  callbacks.i  callbacks_table.h  coreutils-5.97-MSYS-1.0.11-snapshot (1).tar.bz2  csharp_callbacks.h  de.c  dev_tasks.txt  env_shared.sh  general.c  general.h  hist.txt  histogram.py  materials.md  print_packets_pts.c  python_callbacks.h  remuxing.c  simple_ffmpeg.i  simple_ffmpeg_player.c  simple_ffmpeg_video_audio_player.c  simple_ffmpeg_wrap.c  some_audio_decode_convert_encode_sample.c  source1.txt  source_1_all.csv  source_1_video.csv  test_ogg_flac.c  test_simple_ffmpeg.py  test_transcoder.c  test_video_convert.c  transcode.c  transcode.h
cs/: SWIGTYPE_p_AVCodec.cs  SWIGTYPE_p_AVCodecContext.cs  SWIGTYPE_p_AVFormatContext.cs  SWIGTYPE_p_AVFrame.cs  SWIGTYPE_p_AVPacket.cs  SWIGTYPE_p_AVStream.cs  SWIGTYPE_p_SwrContext.cs  SWIGTYPE_p_SwsContext.cs  SWIGTYPE_p_TranscodingContext.cs  SWIGTYPE_p_f_p_AVFormatContext_p_AVCodecContext_p_char__p_AVStream.cs  SWIGTYPE_p_p_f_p_SourceOrDestinatio_p_SourceOrDestinatio_p_TranscodingContext__int.cs  SWIGTYPE_p_p_f_p_SourceOrDestinatio_p_SourceOrDestinatio_p_struct_TranscodingContext__int.cs  SWIGTYPE_p_uint64_t.cs  SWIGTYPE_p_uint8_t.cs  SourceOrDestinatio.cs  TranscodingContext.cs  simple_ffmpeg.cs  simple_ffmpegPINVOKE.cs  simple_ffmpeg_wrap.c
cs/simple_ffmpeg/: simple_ffmpeg.sln  simple_ffmpeg.userprefs
cs/simple_ffmpeg/simple_ffmpeg/: simple_ffmpeg.cproj  simple_ffmpeg.md.pc
cs/test_simple_ffmpeg/: test_simple_ffmpeg.sln  test_simple_ffmpeg.userprefs
cs/test_simple_ffmpeg/test_simple_ffmpeg/: Program.cs  test_simple_ffmpeg.csproj
cs/test_simple_ffmpeg/test_simple_ffmpeg/Properties/: AssemblyInfo.cs
ffmpeg-tutorial0/: Makefile  tutorial05.c
include/: general.h  transcode.h
materials/: big_buck_bunny_video.csv  de.c  ffmpeg-20150712-git-944a1aa-win32-dev.7z  ffmpeg-tutorial.patch  notes.txt  output-example.c  req.txt  source_1_audio.csv  yuan_programmirovanie_grafiki_dlya_windows_source.rar
materials/ffmpeg-tutorial0/: Makefile  simple_window.c
py/: simple_ffmpeg.py  simple_ffmpeg_wrap.c  test_simple_ffmpeg.py
src/: general.c  transcode.c
test/: test_ogg_flac.c  test_transcoder.c
